app/components/views/Stake/index.module.css
@value bp-medium from "@klimadao/lib/theme/breakpoints.css";
@value textButton from "@klimadao/lib/theme/common.module.css";

.stakeCard {
  align-self: center;
  max-width: 64rem;
  background-color: var(--surface-01);
  border-radius: 3.2rem;
  padding: 2.4rem;
  display: grid;
  gap: 3.2rem;
}

.stakeCard_header {
  display: grid;
  gap: 0.8rem;
}

.inputsContainer {
  display: grid;
  gap: 0;
}

.stakeSwitch {
  display: flex;
  justify-content: stretch;
  align-items: center;
  border-radius: 1.6rem 1.6rem 0 0;
  overflow: hidden;
  border: 1px solid var(--primary-variant);
}
.switchButton {
  composes: button from "@klimadao/lib/theme/typography.module.css";
  display: flex;
  align-items: center;
  padding: 1.6rem;
  min-height: 4.8rem;
  display: flex;
  flex-grow: 1;
  justify-content: center;
  background-color: var(--surface04);
}
.switchButton:hover {
  background-color: var(--surface-24);
}
.switchButton[data-active="false"] {
  color: rgb(203, 203, 203); /* off white */
}
.switchButton[data-active="true"] {
  background-color: var(--primary-variant);
  font-weight: bold;
}

.stakeInput {
  min-width: 12rem;
  min-height: 5.4rem;
  display: flex;
  align-items: center;
  justify-content: stretch;
  z-index: 1; /* cover advanced-settings border */
}
.stakeInput_input {
  min-width: 10rem;
  display: flex;
  height: 100%;
  flex-grow: 1;
  flex-shrink: 1;
  background-color: var(--surface-04);
  padding: 0.8rem 1.6rem;
  color: white;
  border: 1px solid white;
  border-radius: 0 0 0 1.6rem;
  outline: none;
  font-family: monospace;
  text-transform: uppercase;
  font-size: 2rem;
}
.stakeInput_input::placeholder {
  color: var(--secondary-variant);
  font-size: 1.6rem;
}
.stakeInput input:focus {
  border-color: var(--secondary);
}
.stakeInput_input:disabled {
  opacity: 0.7;
}
.stakeInput_button {
  composes: button from "@klimadao/lib/theme/typography.module.css";
  background-color: var(--surface-02);
  flex-grow: 0;
  flex-shrink: 0;
  height: 100%;
  padding: 1.6rem;
  display: flex;
  justify-content: center;
  align-items: center;
  border: 1px solid var(--primary-variant);
  border-left-color: transparent;
  border-top-color: transparent;
  border-radius: 0 0 1.6rem 0rem;
  cursor: default;
}
.stakeInput_button:hover:not(:disabled) {
  background-color: var(--surface-24);
  cursor: pointer;
}
.stakeInput_button:focus {
  background-color: var(--primary-variant);
}
.stakeInput_button:disabled {
  opacity: 0.6;
}

.infoIconWrapper {
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 0.5;
  min-width: 2.4rem;
  min-height: 2.4rem;
}

.dataContainer {
  composes: body2 from "@klimadao/lib/theme/typography.module.css";
  display: grid;
  gap: 0.8rem;
  list-style: none;
  padding-left: unset;
}
.dataContainer_address {
  font-family: monospace;
  text-align: center;
  color: var(--gray);
}
.dataContainer_row {
  display: grid;
  gap: 1.6rem;
  grid-template-columns: 1fr 1fr;
}
.dataContainer_label {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  /* because the info icon has whitespace, it makes the center column gap look off center */
  margin-right: -0.5rem;
}
.dataContainer_value {
  color: var(--gray);
  font-size: 1.4rem;
}
.dataContainer_value span {
  font-size: 2rem;
  color: white;
}
.dataContainer_value span[data-warning="true"] {
  color: rgb(248, 152, 27);
}

.buttonRow {
  display: grid;
  grid-template-columns: 1fr auto 1fr;
}
.buttonRow_spinner {
  padding: 0 0.8rem;
  display: flex;
  align-items: center;
}
.submitButton {
  composes: textButton;
  border: 2px solid var(--secondary);
  justify-self: end;
}
.submitButton:not(:disabled):hover {
  background-color: var(--secondary-variant);
}

.statusMessage {
  composes: body1 from "@klimadao/lib/theme/typography.module.css";
  text-align: center;
  color: var(--gray);
}

@media bp-medium {
  .stakeCard {
    padding: 3.2rem;
    min-width: 64rem;
  }
}

